Added POST/renumber-xrefs
